test/types/records/lydia/inheritanceError.good
inheritanceError.chpl:5: error: inheritance is not currently supported for records
